--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="CarlosHRomero.github.io/images/foto2.jpg" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Carlos Hernando Romero.</strong>, Desarrollo de software<br />
 			</header>
