--- a/index2.html
+++ b/index2.html
@@ -12,45 +12,6 @@
     <title></title>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>-->
-                <a class="navbar-brand" href="index">Carlos Hernando Romero </a>
-            </div>
-            <div class="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="Index">Servicios </a></li>
-                    <li><a href="Contact">Contacto </a></li>
-                    <!--@*
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>*@
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>-->
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="imag">
-        <div class="container body-content">
-            <div class="row">
-                <div class="col-sm-7">
-                    <h1 class="mayor">Desarrollo de Software</h1>
-                    <div class="Lista">
-                        <ul>
-                            <li>Aplicaciones Web</li>
-                            <li>Servicios Web</li>
-                            <li>Aplicaciones Desktop</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-                <hr />
-                <footer></footer>
-
-        </div>
-    </div>
+  hola mundo
 </body>
 </html>
