--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     <title></title>
 </head>
 <body>
-  hola mundo
+   <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>-->
+                <a class="navbar-brand" href="index">Carlos Hernando Romero </a>
+            </div>
+            <div class="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="Index">Servicios </a></li>
+                    <li><a href="Contact">Contacto </a></li>
+                    <!--@*
+                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>*@
+                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>-->
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
