--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="/content/site.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/site.css">
 
     <title></title>
 </head>
