--- a/index.html
+++ b/index.html
@@ -33,5 +33,24 @@
             </div>
         </div>
     </div>
+     <div class="imag">
+        <div class="container body-content">
+            <div class="row">
+                <div class="col-sm-7">
+                    <h1 class="mayor">Desarrollo de Software</h1>
+                    <div class="Lista">
+                        <ul>
+                            <li>Aplicaciones Web</li>
+                            <li>Servicios Web</li>
+                            <li>Aplicaciones Desktop</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+                <hr />
+                <footer></footer>
+
+        </div>
+    </div>
 </body>
 </html>
