--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
@@ -45,10 +45,14 @@
                         <li>Aplicaciones Web</li>
                         <li>Servicios Web</li>
                         <li>Aplicaciones Desktop</li>
+                        <li>Aplicaciones Web</li>
+                        <li>Servicios Web</li>
+                        <li>Aplicaciones Desktop</li>
                     </ul>
                 </div>
             </div>
         </div>
+        nm,dmklsdf
         <hr />
         <footer></footer>
 
