--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index">Carlos Hernando Romero </a>
+                <a class="navbar-brand" href="index">CARLOS  ROMERO </a>
             </div>
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-right navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="Index">Servicios </a></li>
                     <li><a href="Contact">Contacto </a></li>
