--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </div>
 
     <div class="body-content">
-        <div class="row">
+        <div class="home">
             <div class="col-sm-12">
-                <h1 class="mayor">Desarrollo de Software</h1>
-                <div class="Lista">
+                <h1 class="derecha">Desarrollo de Software</h1>
+                <!--<div class="Lista">
                     <ul>
                         <li>Aplicaciones Web</li>
                         <li>Servicios Web</li>
@@ -49,9 +49,73 @@
                         <li>Servicios Web</li>
                         <li>Aplicaciones Desktop</li>
                     </ul>
-                </div>
+                </div>-->
             </div>
         </div>
+
+        <section id="services" class="background2 section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 section-title text-center">
+                        <h2>Services</h2>
+                        <span class="section-divider"></span>
+                    </div><!-- /.column -->
+                </div><!-- /.row -->
+                <div class="row">
+                    <!-- Item 1 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                        <div class="services-box">
+                            <span class="pe-7s-compass services-icon"></span>
+                            <h3 class="service-name">1. Consulting</h3>
+                            <p class="text-small">Good decisions come from experience, knowledge and expertise.</p>
+                        </div>
+                    </div><!-- /.column -->
+                    <!-- Item 2 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30-xs">
+                        <div class="services-box topReveal">
+                            <span class="pe-7s-global services-icon"></span>
+                            <h3 class="service-name">2. Web Applications</h3>
+                            <p class="text-small">Use your browser as the door to your business.</p>
+                        </div>
+                    </div><!-- /.column -->
+                    <!-- Item 3 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30-sm mt30-xs">
+                        <div class="services-box rightReveal">
+                            <span class="pe-7s-camera services-icon"></span>
+                            <h3 class="service-name">3. Photography & Design</h3>
+                            <p class="text-small">Here I work with a very talented friend of mine who has the experience we need.</p>
+                        </div>
+                    </div><!-- /.column -->
+                    <!-- Item 4 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30">
+                        <div class="services-box leftReveal">
+                            <span class="pe-7s-anchor services-icon"></span>
+                            <h3 class="service-name">4. Data Recovery</h3>
+                            <p class="text-small">Recover important documents, pictures, songs, projects, etc.</p>
+                        </div>
+                    </div><!-- /.column -->
+                    <!-- Item 5 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30">
+                        <div class="services-box bottomReveal">
+                            <span class="pe-7s-users services-icon"></span>
+                            <h3 class="service-name">5. Technical Support</h3>
+                            <p class="text-small">Avoid issues with your computer, periodic maintenance saves you a lot of time.</p>
+                        </div>
+                    </div><!-- /.column -->
+                    <!-- Item 6 -->
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30">
+                        <div class="services-box rightReveal">
+                            <span class="pe-7s-signal services-icon"></span>
+                            <h3 class="service-name">6. Networking</h3>
+                            <p class="text-small">Ready to set up your home or business network.</p>
+                        </div>
+                    </div><!-- /.column -->
+                </div><!-- /.row -->
+            </div><!-- /.container -->
+        </section><!-- /.section -->
+
+
+
         nm,dmklsdf
         <hr />
         <footer></footer>
