Se inserto site.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/assets/js/site.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/site.css">
 
     <title></title>
@@ -38,8 +39,8 @@
 
     <div class="body-content">
         <div class="home">
-            <div class="col-sm-12">
-                <h1 class="derecha">Desarrollo de Software</h1>
+           <!-- <div class="col-sm-12">-->
+                <h1 class="derecha mayor">Desarrollo de Software</h1>
                 <!--<div class="Lista">
                     <ul>
                         <li>Aplicaciones Web</li>
@@ -51,7 +52,7 @@
                     </ul>
                 </div>-->
             </div>
-        </div>
+        <!--</div>-->
 
         <section id="services" class="background2 section-padding">
             <div class="container">
@@ -114,9 +115,6 @@
             </div><!-- /.container -->
         </section><!-- /.section -->
 
-
-
-        nm,dmklsdf
         <hr />
         <footer></footer>
 
