--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title></title>
 </head>
 
-<body>
+<body onresize="resize()">
 
 
     <div class="navbar navbar-inverse">
@@ -30,7 +30,7 @@
             </div>
             <div class="collapse navbar-right navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="Index">Servicios </a></li>
+                    <li><a href="#services">Servicios </a></li>
                     <li><a href="Contact">Contacto </a></li>
                 </ul>
             </div>
@@ -39,26 +39,26 @@
 
     <div class="body-content">
         <div class="home">
-           <!-- <div class="col-sm-12">-->
-                <h1 class="derecha mayor">Desarrollo de Software</h1>
-                <!--<div class="Lista">
-                    <ul>
-                        <li>Aplicaciones Web</li>
-                        <li>Servicios Web</li>
-                        <li>Aplicaciones Desktop</li>
-                        <li>Aplicaciones Web</li>
-                        <li>Servicios Web</li>
-                        <li>Aplicaciones Desktop</li>
-                    </ul>
-                </div>-->
-            </div>
+            <!-- <div class="col-sm-12">-->
+            <h1 class="derecha mayor">Desarrollo de Software </h1>
+            <!--<div class="Lista">
+                <ul>
+                    <li>Aplicaciones Web</li>
+                    <li>Servicios Web</li>
+                    <li>Aplicaciones Desktop</li>
+                    <li>Aplicaciones Web</li>
+                    <li>Servicios Web</li>
+                    <li>Aplicaciones Desktop</li>
+                </ul>
+            </div>-->
+        </div>
         <!--</div>-->
 
         <section id="services" class="background2 section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 section-title text-center">
-                        <h2>Services</h2>
+                        <h2>Servicios</h2>
                         <span class="section-divider"></span>
                     </div><!-- /.column -->
                 </div><!-- /.row -->
@@ -67,8 +67,8 @@
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="services-box">
                             <span class="pe-7s-compass services-icon"></span>
-                            <h3 class="service-name">1. Consulting</h3>
-                            <p class="text-small">Good decisions come from experience, knowledge and expertise.</p>
+                            <h3 class="service-name">1. Consultoría</h3>
+                            <p class="text-small">Diseños de aplicaciones</p>
                         </div>
                     </div><!-- /.column -->
                     <!-- Item 2 -->
@@ -80,21 +80,7 @@
                         </div>
                     </div><!-- /.column -->
                     <!-- Item 3 -->
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30-sm mt30-xs">
-                        <div class="services-box rightReveal">
-                            <span class="pe-7s-camera services-icon"></span>
-                            <h3 class="service-name">3. Photography & Design</h3>
-                            <p class="text-small">Here I work with a very talented friend of mine who has the experience we need.</p>
-                        </div>
-                    </div><!-- /.column -->
-                    <!-- Item 4 -->
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30">
-                        <div class="services-box leftReveal">
-                            <span class="pe-7s-anchor services-icon"></span>
-                            <h3 class="service-name">4. Data Recovery</h3>
-                            <p class="text-small">Recover important documents, pictures, songs, projects, etc.</p>
-                        </div>
-                    </div><!-- /.column -->
+                   
                     <!-- Item 5 -->
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 mt30">
                         <div class="services-box bottomReveal">
