--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="/assets/js/site.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/site.css">
 
-    <title></title>
+    <title>Carlos Romero</title>
 </head>
 
 <body onresize="resize()">
@@ -68,7 +68,8 @@
                         <div class="services-box">
                             <span class="pe-7s-compass services-icon"></span>
                             <h3 class="service-name">1. Consultoría</h3>
-                            <p class="text-small">Diseños de aplicaciones</p>
+                            <p class="text-small">Definición de requerimientos</p>
+                            <p class="text-small">Definición de requerimientos</p>
                         </div>
                     </div><!-- /.column -->
                     <!-- Item 2 -->
